samples/_failures_safe/1761318921_974b22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61db4f38.c: In function ‘main’:
./samples/SAFE/__tmp_61db4f38.c:165: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_61db4f38.c:164:5: error: expected declaration or statement at end of input
  164 |     if
      |     ^~
